<resources>
    <string name="app_name">ProjekFinal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username1">Username</string>
    <string name="create1">Create</string>
    <string name="username12">Username</string>
    <string name="email12">Email</string>
    <string name="password12">Password</string>
    <string name="register_now12">Register Now</string>
    <string name="already_have_an_account12">Already have an Account</string>
    <string name="log_in12">Log In</string>
    <string name="sign_into_your_account1">Sign into your Account</string>
    <string name="username123">Username</string>
    <string name="forget_your_password12">Forget your Password?</string>
    <string name="log_in123">Log In</string>
    <string name="don_t_have_an_account123">don\'t have an Account</string>
    <string name="register_now123">Register Now</string>
    <string name="hello123">Hello</string>
    <string name="password1233">Password</string>
    <string name="register12">Register</string>
    <string name="repeat_password12">Repeat Password</string>
    <string name="setting_profile12">Setting Profile</string>
    <string name="schedule12">Schedule</string>
    <string name="report_rate12">Report Rate</string>
    <string name="open1">open</string>
    <string name="close1">close</string>

    <string name="open">open</string>
    <string name="false1">false</string>
    <string-array name="choose_item">
        <item>Choose a Level</item>
        <item>Kp Kantor</item>
        <item>APT</item>
        <item>Seksi KI</item>
        <item>Seksi Terkait</item>
        <item>Supervisor</item>
    </string-array>
    <string name="title_activity_a_p_t">APTActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="isi_data12">Isi Data</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="done12">Done</string>
    <string name="name12">Name</string>
    <string name="validasi_rate">Validasi Rate</string>


    <string-array name="choose_service">
        <item>Pilih Pelayanan</item>
        <item>Kepala Kantor</item>
        <item>PKN</item>
        <item>KI</item>
        <item>HI</item>
        <item>Umum</item>
        <item>Penilaian</item>
    </string-array>
    <string-array name="gender">
        <item>Gender</item>
        <item>Laki-Laki</item>
        <item>Perempuan</item>
    </string-array>
    <string-array name="identitas_tamu">
        <item>Identitas Tamu</item>
        <item>Perorangan</item>
        <item>Korporasi</item>
    </string-array>
    <string-array name="Kartu_identitas">
        <item>Kartu Identitas</item>
        <item>KTP</item>
        <item>SIM</item>
        <item>Passport</item>
    </string-array>
</resources>
