<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:theme="@style/noActionBarr"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_gravity="center"
        android:layout_marginTop="84dp"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:background="@drawable/btn_bg"
        android:orientation="vertical"
        android:paddingEnd="12dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/kanit_medium"
            android:text="@string/hello123"
            android:textColor="#3f4658"
            android:textSize="38sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-8dp"
            android:fontFamily="@font/kanit_regular"
            android:text="@string/sign_into_your_account1"
            android:textColor="#E43F4658"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/username_login"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_edit"
            android:drawableStart="@drawable/ic_account"
            android:hint="@string/username12"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="7dp"
            android:drawablePadding="3dp"
            tools:ignore="LabelFor" />


        <EditText
            android:id="@+id/pass_login"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_edit"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/password1233"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="7dp"
            android:drawablePadding="3dp"
            tools:ignore="LabelFor" />

        <Spinner
            android:id="@+id/spinner_login"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="12dp"
            android:entries="@array/choose_item"
            android:backgroundTint="@color/color1"/>

        <TextView
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="4dp"
            android:layout_marginRight="12dp"
            android:fontFamily="@font/kanit_regular"
            android:text="@string/forget_your_password12"
            android:textColor="#3f4658"
            android:textSize="14sp"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_login"
            android:text="@string/log_in123"
            android:textColor="#ffff"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kanit_regular"
                android:text="@string/don_t_have_an_account123"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/kanit_regular"
                android:text="@string/register_now123"
                android:textColor="#ff7c17"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>